Resolved issues